Fix consecutive buttons spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,3 +12,16 @@
 @import 'patterns_syntax-highlight';
 @include vfio-p-navigation;
 @include vfio-p-syntax-highlight;
+
+// Consecutive button fix
+// https://github.com/vanilla-framework/vanilla-framework/issues/1144
+button,
+[class^="p-button"] {
+
+  & + & {
+
+    @media (min-width: $breakpoint-medium) {
+      margin-left: $sp-small;
+    }
+  }
+}
